2006-01-16  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/python.py (Settable): Another idea from twisted imported,
	and improved.

	* kiwi/ui/test/listener.py: Pass signals to event types.
	Add a SkipEvent exception to be able to filter inside the
	event. Fix DoubleClick event on the list to be caught earlier.
	
	* kiwi/ui/test/player.py (ThreadSafeFunction._invoke): 
	Refactor to always return False after the call.

	* kiwi/ui/test/listener.py: Add a new event for toolbutton clicks.

2006-01-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/combobox.py (ComboBox.clear): Emit content-changed 
	here so the model is updated.

	* kiwi/ui/test/listener.py:
	* kiwi/ui/widgets/list.py:
	Add get_selected_row_number() and double_click() methods to the
	klist.

	Add support for List::double-click signal in the ui test.

	Fixes #2385

2006-01-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/test/common.py: Add support for GtkToolButtons

	* kiwi/ui/test/player.py:
	Update UI tests, to be able to run several times in the same
	process as done in stoqs ui test framework.
	
2006-01-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/environ.py: Add support for py2exe, based on
	patch by Carlos Augusto Marcicano

	* kiwi/argcheck.py (argcheck._type_check): Add support for sending
	in the default value, even if the type is diffent

	* tests/test_argcheck.py (ArgTest.func_none): Add test for this

2006-01-10  Johan Dahlin  <jdahlin@async.com.br>

	* examples/list/searchbar.py: New example

	* kiwi/ui/widgets/list.py (List.add_list): 
	Be a bit smarter when cleaning the list, instead of removing
	all items, check if they're inserted first.
	Refactor remove and remove type sniffing.
	(Column.__init__): Set data_type to string as default.

2006-01-09  Johan Dahlin  <jdahlin@async.com.br>

	* tests/test_datatypes.py: Check if the locale is present before
	running the tests. Fixes #2377

2006-01-03  Johan Dahlin  <jdahlin@async.com.br>
